[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-lens"
version = "0.1.0"
description = "Audio transcription and speech analysis for the poly-lens family"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "huggingface-hub>=0.21",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
audiolens = "audio_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
