[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-analyser"
version = "0.3.0"
description = "Audio transcription and speech analysis for the analyser family"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "huggingface-hub>=0.21",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
speech-analyser = "speech_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/speech_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real ML models (faster-whisper, pyannote) — opt-in with `pytest -m slow`",
]
