[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-analyser"
version = "0.6.0"
description = "Audio transcription and speech analysis for the analyser family"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "huggingface-hub>=0.21",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Contract scaffolding; [ratelimit] brings slowapi for add_rate_limit.
    "lens-contract[ratelimit]>=0.2.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
embeddings = [
    "lens-embed[text]>=0.1.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

# Local dev: resolve lens-contract from the sibling checkout. uv strips this from
# the published wheel, which keeps the plain `lens-contract[ratelimit]>=0.2.0` PyPI pin.
[tool.uv.sources]
lens-contract = { path = "../lens-contract", editable = true }
lens-embed = { path = "../lens-embed", editable = true }

[project.scripts]
speech-analyser = "speech_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/speech_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real ML models (faster-whisper, pyannote) — opt-in with `pytest -m slow`",
]
